feat(plan): resolve testing model, seed performance-evidence ticket
Work-through: resolve ticket 10 (all-four test categories incl cross-version compat matrix + zero-alloc CI gate with per-platform alloc profiling, expect/actual counter, commonTest on JVM+iosArm64+iosSimulatorArm64, ABI lock). Graduate ticket 11 (performance-evidence plan, research) as next frontier. Update map.